--- a/src/pages/pemakaian3/pemakaian3.scss
+++ b/src/pages/pemakaian3/pemakaian3.scss
@@ -1,3 +1,11 @@
 page-pemakaian3 {
 
 }
+
+.buttons{
+    font-size: 18px;
+	color: #eaeaea;
+	width: 100%;
+	padding: 100px;
+	text-color:MediumSeaGreen;
+}
